@@ -18,6 +18,10 @@
    - stevesk@cvs.openbsd.org 2002/09/11 17:55:03
      [ssh.1]
      add agent and X11 forwarding warning text from ssh_config.5; ok markus@
+   - stevesk@cvs.openbsd.org 2002/09/11 18:27:26
+     [authfd.c authfd.h ssh.c]
+     don't connect to agent to test for presence if we've previously
+     connected; ok markus@
 
 20020911
  - (djm) Sync openbsd-compat with OpenBSD -current
